# scheme

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  notes.md
src/: environment.cpp  environment.h  evaluator.cpp  evaluator.h  main.cpp  main.h  printer.cpp  printer.h  reader.cpp  reader.h  util.cpp  util.h
src/datatypes/: Closure.cpp  Closure.h  closure.h  environment.cpp  environment.h  types.cpp  types.h
tests/: executable_file.output.txt  executable_file.scm  reader_test.cpp  tests.cpp
